<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_ChannelSignals" Id="{7f84af8e-eee8-4948-bf67-bdfb9decf211}">
    <Declaration><![CDATA[TYPE ST_ChannelSignals :
STRUCT
	DoSingleBlock: BOOL;
	SingleBlock: BOOL;
	FeedHold: BOOL;
	Backward: BOOL;
	PrgBlockIgnore: BOOL;
	M01Stop: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>